--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.67.1",
     "axios": "^1.8.1",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
